# TerraMap-wasm

./: .eslintrc.cjs  .gitignore  .prettierrc  AGENTS.md  Plan.md  Process.md  README.md  about.html  eslint.config.js  index.html  p.md  package-lock.json  package.json  pp2.md  session-be6cd9f2-2795-423c-aa72-8a9d5944e687.jsonl  test-wasm.js  test.html  test.wld  tsconfig.json  vite.config.ts
.iflow/: settings.json
assets/: index-C9zCCBLH.css  index-Da_uXEdO.js  terra_map_wasm-C1ho2FrT.js  terra_map_wasm_bg-CZyXucCg.wasm
rust/: Cargo.toml
rust/src/: colors.rs  colors_generated.rs  data_stream.rs  lib.rs  renderer.rs  search.rs  world_loader.rs
scripts/: extract_colors.cjs  fix_compilation.cjs  fix_warnings.cjs  replace_colors.cjs
src/: App.svelte  app.css  pkg.d.ts
src/components/: BlockSelector.svelte  InfoPanel.svelte  MapCanvas.svelte  NPCTracker.svelte  Toolbar.svelte
src/lib/: npcData.js  npcData.js.map  npcData.ts  stores.js  stores.js.map  stores.ts  tileData.js  tileData.js.map  tileData.ts  types.ts  wasm.js  wasm.js.map  wasm.ts
